syntax = "proto3";

service Whiskmate {
  rpc GetRecipes (GetRecipesRequest) returns (GetRecipesResponse);
  rpc GetIngredients (GetIngredientsRequest) returns (GetIngredientsResponse);
}

message GetRecipesRequest {
}

message GetRecipesResponse {
  repeated Recipe recipes = 1;
}

message GetIngredientsRequest {
  string recipeId = 1;
}

message GetIngredientsResponse {
  repeated Ingredient ingredients = 1;
}

message Ingredient {
  string name = 1;
}

message Recipe {
  string id = 1;
  string name = 2;
}